--- a/justone.html
+++ b/justone.html
@@ -748,19 +748,15 @@
     </div>
 
 
-    <div class="blank">&nbsp;</div>
-    <div class="blank">&nbsp;</div>
-    <div class="blank">&nbsp;</div>
-    <div class="blank">&nbsp;</div>
-    <hr>
-    <div class="blank">&nbsp;</div>
 
-    <!-- 게시판 -->
+    <!-- 게시판
     <div class="board">
         <iframe src="http://cje960018.dothome.co.kr/gnuboard5/bbs/board.php?bo_table=dd_01" frameborder="1" width="80%" height="700" scrolling="auto"></iframe>
-    </div>
+    </div> -->
 
-    <div class="colorwrap">
+    <!-- <div class="colorwrap"> -->
+
+
     <!-- 인스타 리뷰 -->
     <div class="instarow">
         <span>@JUSTONE_official</span>
