--- a/justone.html
+++ b/justone.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+    <a name="top"></a>
 
     <!-- PC화면시작 -->
     <div class="pc_all">
@@ -754,9 +755,7 @@
         <iframe src="http://cje960018.dothome.co.kr/gnuboard5/bbs/board.php?bo_table=dd_01" frameborder="1" width="80%" height="700" scrolling="auto"></iframe>
     </div> -->
 
-    <!-- <div class="colorwrap"> -->
-
-
+    <div class="colorwrap">
     <!-- 인스타 리뷰 -->
     <div class="instarow">
         <span>@JUSTONE_official</span>
@@ -925,17 +924,22 @@
             <br><br><br>
         </div>
     </footer>
+
+    </div>
 </div>
+
+<!-- 퀵메뉴 -->
+<div class="quick_menu">
+    <div id="quick_top">
+        <a href="#top">TOP</a>
+    </div>
+
+    <div id="quick_end">
+        <a href="#end">END</a>
+    </div>
 </div>
 
+<a name="end"></a>
 
-    
-
-
-
-
-
-
-    
 </body>
 </html>
